sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ')' expected but '<-' found.
  	while(i <- n-1 && plusPetit(i+1,i)){
                ^AlgBubbleSort1:8: error: illegal start of simple expression
  	while(i <- n-1 && plusPetit(i+1,i)){
                                          ^